Add placeholder text

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-25">
-                                <h2>About company</h2>
+                                <h2>About Osha Laundromat</h2>
                             </div>
                             <p class="mb-20">
                                 The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!
