--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 <!-- Logo -->
                 <div class="header-left">
                     <div class="logo">
-                        <a href="index.html"><img src="" alt=""></a>
+                        <a href="index.html"><img src="assets/img/logo/logo.png" width="95" height="91" alt="Osha Laundromat Logo"></a>
                     </div>
                     <div class="menu-wrapper  d-flex align-items-center">
                         <!-- Main-menu -->
