--- a/blog_details.html
+++ b/blog_details.html
@@ -55,6 +55,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="services.html">Services</a></li>
+                  <li><a href="oshapay.html">Osha Pay</a></li>
                   <li class="active"><a href="blog.html">Blog</a>
                     <ul class="submenu">
                       <li><a href="blog.html">Blog</a></li>
@@ -514,7 +515,8 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
            <div class="single-footer-caption mb-30">
             <!-- logo -->
             <div class="footer-logo mb-35">
-              <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+              <a href="index.html"><img src="assets/img/logo/logo.png" height="90" width="100" alt=""></a>
+
             </div>
             <div class="footer-tittle">
               <div class="footer-pera">
