--- a/services.html
+++ b/services.html
@@ -54,6 +54,7 @@
                                 <ul id="navigation">                                                                                          
                                     <li><a href="index.html">Home</a></li>
                                     <li  class="active"><a href="services.html">Services</a></li>
+                                    <li><a href="oshapay.html">Osha Pay</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
@@ -301,7 +302,7 @@
                        <div class="single-footer-caption mb-30">
                         <!-- logo -->
                         <div class="footer-logo mb-35">
-                            <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                            <a href="index.html"><img src="assets/img/logo/logo.png" height="90" width="100" alt=""></a>
                         </div>
                         <div class="footer-tittle">
                             <div class="footer-pera">
