--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <span class="element">Our Process</span>
-                            <h2>This is how we work</h2>
+                            <h2>Washing - How it Works</h2>
                         </div>
                     </div>
                 </div>
@@ -121,8 +121,10 @@
                                 <img src="assets/img/icon/services-icon1.svg" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">We collect your clothes</a></h5>
-                                <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                                <h5><a href="services.html">Step One</a></h5>
+                                <p>
+                                    Place your dirty clothes in the washer and shut the door.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -132,8 +134,11 @@
                                 <img src="assets/img/icon/services-icon2.svg" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Wash your clothes</a></h5>
-                                <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                                <h5><a href="services.html">Step Two</a></h5>
+                                <p>
+                                    Add your chosen washing powder where indicated.
+                                    Remember to take your own powder.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -143,8 +148,127 @@
                                 <img src="assets/img/icon/services-icon3.svg" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Get delivery</a></h5>
-                                <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                                <h5><a href="services.html">Step Three</a></h5>
+                                <p>
+                                    Enter your OshaPay tokens.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon3.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step Four</a></h5>
+                                <p>
+                                    Select your machine cycle and press start.
+                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon3.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step Five</a></h5>
+                                <p>
+                                    Once the washer is finished, remove your clean clothes.
+                                    As easy as that!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="services-area pt-top border-bottom pb-20 mb-60">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-7 col-lg-8">
+                        <div class="section-tittle text-center mb-55">
+                            <span class="element">Our Process</span>
+                            <h2>Drying - How it Works</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon1.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step One</a></h5>
+                                <p>
+                                    Place your clothes in the dryer and shut the door.
+                                    Be sure to have checked the care labels first!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon2.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step Two</a></h5>
+                                <p>
+                                    enter your Osha Pay tokens.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon3.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step Three</a></h5>
+                                <p>
+                                    Select the temperature setting.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon3.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step Four</a></h5>
+                                <p>
+                                    Press start.
+                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center">
+                            <div class="cat-icon">
+                                <img src="assets/img/icon/services-icon3.svg" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Step Five</a></h5>
+                                <p>
+                                    Take your cloths out, and fold while nice and warm.
+                                    As easy as that!
+                                </p>
                             </div>
                         </div>
                     </div>
